[gd_scene load_steps=10 format=2]

[ext_resource path="res://ARVROrigin.gd" type="Script" id=1]
[ext_resource path="res://VrController.gd" type="Script" id=3]
[ext_resource path="res://HeadCamera.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=9]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.596078, 0.8, 0.32549, 1 )

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.388235, 0.803922, 0.776471, 1 )

[sub_resource type="CylinderMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.533333, 0.211765, 0.305882, 1 )

[node name="ARVROrigin" type="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.1, 0 )
script = ExtResource( 1 )

[node name="HeadCamera" type="ARVRCamera" parent="."]
script = ExtResource( 4 )

[node name="LeftController" type="ARVRController" parent="."]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="LeftController"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0.0905263, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 3 )

[node name="RightController" type="ARVRController" parent="."]
controller_id = 2
script = ExtResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="RightController"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../../LeftController")
material/0 = SubResource( 4 )

[node name="OriginMarker" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.01, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )
